calico/policies/egress/payments-policy.yaml
# https://docs.projectcalico.org/v3.1/getting-started/kubernetes/tutorials/advanced-policy

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: pci
  name: payments-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: queue
